<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:title="@string/menu_profile"
            />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_filter_list_black_24dp"
            android:title="@string/menu_category" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_round_question"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/menu_logout" />
    </group>
</menu>
