<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="br.com.devteam.relative.view.fragment.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_profile"
            app:destination="@id/nav_profile" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="br.com.devteam.relative.view.fragment.UserProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/user_profile_fragment" />
    <fragment
        android:id="@+id/nav_about"
        android:name="br.com.devteam.relative.view.fragment.AboutFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/about_fragment" />

    <fragment
        android:id="@+id/nav_category"
        android:name="br.com.devteam.relative.view.fragment.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/category_fragment" />
</navigation>