<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragment"
            type="br.com.devteam.relative.view.fragment.UserProfileFragment" />

        <variable
            name="userProfile"
            type="br.com.devteam.relative.domain.UserProfile" />

        <variable
            name="publicProfile"
            type="br.com.devteam.relative.enums.ProfileVisibilityEnum" />
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".fragment.ProfileFragment">

                <RelativeLayout
                    android:id="@+id/r_layout_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/grad"
                    android:paddingBottom="20dp">

                    <RelativeLayout
                        android:id="@+id/lt_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/circle_border">

                        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/iv_profile"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_marginStart="9dp"
                            android:layout_marginTop="9dp"
                            android:layout_marginEnd="9dp"
                            android:layout_marginBottom="9dp"
                            android:onClick="@{fragment::checkPermission}"
                            android:padding="3dp"
                            android:src="@drawable/ic_social"
                            app:civ_border_color="#FF000000"
                            app:civ_border_width="2dp" />

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/lt_img"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15sp"
                        android:fontFamily="sans-serif-light"
                        android:text="@{userProfile.displayName}"
                        android:textColor="@color/white"
                        android:textSize="32sp" />

                    <TextView
                        android:id="@+id/tv_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_name"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="sans-serif"
                        android:text="@{userProfile.email}"
                        android:textAllCaps="true"
                        android:textColor="@color/address"
                        android:textSize="14sp" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/l_layout_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/r_layout_1"
                    android:orientation="horizontal">

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/l_layout_2">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="30dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tv_lbl_display_name"
                                android:textColor="@color/headings"
                                android:textSize="13sp" />

                            <!--                    <TextView-->
                            <!--                        android:layout_width="wrap_content"-->
                            <!--                        android:layout_height="wrap_content"-->
                            <!--                        android:fontFamily="sans-serif-light"-->
                            <!--                        android:text="bites@gmail.com"-->
                            <!--                        android:textColor="#000000"-->
                            <!--                        android:textSize="18sp" />-->
                            <EditText
                                android:id="@+id/et_dysplay_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@android:color/transparent"
                                android:fontFamily="sans-serif-light"
                                android:hint=""
                                android:inputType="textEmailAddress"
                                android:text="@{userProfile.displayName}"
                                android:textColor="#000000"
                                android:textColorHint="#797979"
                                android:textSize="18sp" />


                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_marginTop="15dp"
                                android:background="@color/grey" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/lbl_bio"
                                android:textColor="@color/headings"
                                android:textSize="13sp" />

                            <EditText
                                android:id="@+id/et_bio"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-light"
                                android:text="@{userProfile.bio}"
                                android:textColor="#000000"
                                android:textSize="18sp" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_marginTop="15dp"
                                android:background="@color/grey" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/lbl_visibility"
                                android:textColor="@color/headings"
                                android:textSize="13sp" />

                            <!--                            <TextView-->
                            <!--                                android:layout_width="wrap_content"-->
                            <!--                                android:layout_height="wrap_content"-->
                            <!--                                android:fontFamily="sans-serif-light"-->
                            <!--                                android:text="\@\Bites"-->
                            <!--                                android:textColor="#000000"-->
                            <!--                                android:textSize="18sp" />-->

                            <Switch
                                android:id="@+id/sw_visibility"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:checked="false"
                                android:text="@string/switch_visibility" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_marginTop="15dp"
                                android:background="@color/grey" />

                        </LinearLayout>

                        <!--                        <LinearLayout-->
                        <!--                            android:layout_width="match_parent"-->
                        <!--                            android:layout_height="wrap_content"-->
                        <!--                            android:layout_marginTop="15dp"-->
                        <!--                            android:orientation="vertical">-->

                        <!--                            <TextView-->
                        <!--                                android:layout_width="wrap_content"-->
                        <!--                                android:layout_height="wrap_content"-->
                        <!--                                android:text="Facebook"-->
                        <!--                                android:textColor="@color/headings"-->
                        <!--                                android:textSize="13sp" />-->

                        <!--                            <TextView-->
                        <!--                                android:layout_width="wrap_content"-->
                        <!--                                android:layout_height="wrap_content"-->
                        <!--                                android:fontFamily="sans-serif-light"-->
                        <!--                                android:text="Bites"-->
                        <!--                                android:textColor="#000000"-->
                        <!--                                android:textSize="18sp" />-->

                        <!--                            <View-->
                        <!--                                android:layout_width="match_parent"-->
                        <!--                                android:layout_height="1dp"-->
                        <!--                                android:layout_marginTop="15dp"-->
                        <!--                                android:background="@color/grey" />-->
                        <!--                        </LinearLayout>-->

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="100dp"
                            android:orientation="vertical">

                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:background="@drawable/grad"
                                android:elevation="0dp"
                                android:onClick="@{fragment::saveProfile}"
                                android:text="Salvar"
                                android:tint="@android:color/white"
                                app:elevation="0dp"
                                app:fabCustomSize="55dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.498"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="0.0"
                                tools:ignore="RelativeOverlap" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </LinearLayout>


                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</layout>